--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Saúde Mental</title>
+    <title>A dama e o vagabundo</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="#" class="botao">
-        <span>Saúde Mental</span>
-        <img src="https://miro.medium.com/v2/resize:fit:2800/format:webp/0*NFGUt0O1v7BzNKZr.jpg
-        " alt="" srcset="">
-    </a>
+    <div>
+        <button class="botao">
+            <span>A dama e o vagabundo</span>
+        </button>
+
+    </div>
 </body>
 </html>
 
